--- a/index.html
+++ b/index.html
@@ -8,11 +8,12 @@
 </head>
 <body>
     <div class="container">
-        <h1>闰年判断工具</h1>
+        <h1>龙岗区天誉实验学校306班罗桉然--闰年判断工具</h1>
         <input type="number" id="yearInput" placeholder="请输入年份" min="1">
         <button onclick="checkLeapYear()">检测</button>
         <div id="result"></div>
     </div>
     <script src="script.js"></script> <!-- 引入JS -->
 </body>
+
 </html>
